# Mario

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  Toolchain-macos.cmake
include/Mario/: Background.h  Game.h  Ground.h  Mario.h  Object.h  ScoreBoard.h  Turtle.h  definitions.h
src/: main.cpp
src/Mario/: Background.cpp  Game.cpp  Ground.cpp  Mario.cpp  Object.cpp  ScoreBoard.cpp  Turtle.cpp
